--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,16 @@
   background: gray;
   height: 250px;
 }
+
+
 .temp-photo {
   height: 200px;
   width: 200px;
   background: white;
+  margin-right:20px;
   margin-top:10px;
+  margin-bottom:10px;
+
 }
 
 .top-link {
