--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,28 @@
+.app-bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background-color: darkgray;
+}
+
 .App {
   display: block;
-  background: blue;
 }
 
 .header {
   background: gray;
   height: 250px;
 }
-
 
 .temp-photo {
   height: 200px;
@@ -21,13 +36,6 @@
 
 .top-link {
   color: white;
-}
-
-.App-header {
-}
-
-.App-intro {
-  font-size: large;
 }
 
 .btn-toolbar{
